--- a/apps/web/src/app.css
+++ b/apps/web/src/app.css
@@ -1,6 +1,46 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import 'tailwindcss';
+
+@plugin '@tailwindcss/typography';
+
+@source '../../../packages/ui/components*.{html,js,svelte,ts}';
+
+@theme {
+  --grid-template-columns-projects: repeat(auto-fit, minmax(450px, 1fr));
+  --grid-template-columns-project-content: 250px 1fr;
+
+  --font-sans: var(--font-fira-code);
+  --font-sans--0: ui-sans-serif;
+  --font-sans--1: system-ui;
+  --font-sans--2: sans-serif;
+  --font-sans--3: 'Apple Color Emoji';
+  --font-sans--4: 'Segoe UI Emoji';
+  --font-sans--5: 'Segoe UI Symbol';
+  --font-sans--6: 'Noto Color Emoji';
+  --font-sans--length: 7;
+}
+
+@utility container {
+  margin-inline: auto;
+  padding-inline: 2rem;
+}
+
+/*
+  The default border color has changed to `currentColor` in Tailwind CSS v4,
+  so we've added these compatibility styles to make sure everything still
+  looks the same as it did with Tailwind CSS v3.
+
+  If we ever want to remove these styles, we need to add an explicit border
+  color utility to any element that depends on these defaults.
+*/
+@layer base {
+  *,
+  ::after,
+  ::before,
+  ::backdrop,
+  ::file-selector-button {
+    border-color: var(--color-gray-200, currentColor);
+  }
+}
 
 :root {
   --font-fira-code: 'Fira Code';
