fix: update tailwind styles for packages

--- a/apps/web/src/app.css
+++ b/apps/web/src/app.css
@@ -2,7 +2,7 @@
 
 @plugin '@tailwindcss/typography';
 
-@source '../../../packages/ui/components*.{html,js,svelte,ts}';
+@source '../../../packages/ui/components';
 
 @theme {
   --grid-template-columns-projects: repeat(auto-fit, minmax(450px, 1fr));
